{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 13,
  "lineage": "5d6bb78f-5bb1-864c-825f-517416dec20c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085925f297f89fce1",
            "arn": "arn:aws:ec2:us-east-1:599760644749:instance/i-0fb67de9367ffb9f1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fb67de9367ffb9f1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-067c4c6c5b967a8a6",
            "private_dns": "ip-10-0-10-199.ec2.internal",
            "private_ip": "10.0.10.199",
            "public_ip": "184.72.201.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ab17cdd01ce63648",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b8d14d6f5e7e87c",
            "tags": {
              "Name": "var.environment-webservers"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02c20bdc692af62f0"
            ]
          },
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_subnet.pri1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599760644749:security-group/sg-0c22151434f136ed4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c22151434f136ed4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Baleanceador",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb-sg",
            "name_prefix": null,
            "owner_id": "599760644749",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01a5228ff15674a24"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599760644749:security-group/sg-02c20bdc692af62f0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c20bdc692af62f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Instancias",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": null,
            "owner_id": "599760644749",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01a5228ff15674a24"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599760644749:subnet/subnet-02b8d14d6f5e7e87c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-02b8d14d6f5e7e87c",
            "map_public_ip_on_launch": true,
            "owner_id": "599760644749",
            "tags": {
              "Name": "pri1"
            },
            "vpc_id": "vpc-01a5228ff15674a24"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599760644749:subnet/subnet-03f325498f6e44944",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-03f325498f6e44944",
            "map_public_ip_on_launch": true,
            "owner_id": "599760644749",
            "tags": {
              "Name": "pri2"
            },
            "vpc_id": "vpc-01a5228ff15674a24"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599760644749:subnet/subnet-0494e2c3e70d43c4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0494e2c3e70d43c4f",
            "map_public_ip_on_launch": true,
            "owner_id": "599760644749",
            "tags": {
              "Name": "pub1"
            },
            "vpc_id": "vpc-01a5228ff15674a24"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599760644749:subnet/subnet-00369792629b94ab0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00369792629b94ab0",
            "map_public_ip_on_launch": true,
            "owner_id": "599760644749",
            "tags": {
              "Name": "pub2"
            },
            "vpc_id": "vpc-01a5228ff15674a24"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:599760644749:vpc/vpc-01a5228ff15674a24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0097b6373ced6b050",
            "default_route_table_id": "rtb-03fb7a71637941485",
            "default_security_group_id": "sg-0053b81f85c2da024",
            "dhcp_options_id": "dopt-254ce65f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": false,
            "id": "vpc-01a5228ff15674a24",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03fb7a71637941485",
            "owner_id": "599760644749",
            "tags": {
              "Name": "Manzano_vpc"
            }
          }
        }
      ]
    }
  ]
}